src/core-crm/objects/Product2/fields/Available_on_Cart__c.field-meta.xml
<CustomField>
    <fullName>Available_on_Cart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will drive the product visibility in Product Catalogue and Corporate Portal</description>
    <label>Available on Cart</label>
    <type>Checkbox</type>
</CustomField>