src/core-crm/objects/Product2/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <formula>TEXT( Course__r.Certificate_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Type</label>
    <type>Text</type>
</CustomField>