src/core-crm/objects/Product2/fields/Child_of_Prescribed_Program__c.field-meta.xml
<CustomField>
    <fullName>Child_of_Prescribed_Program__c</fullName>
    <description>Indicates that a product is a child of a prescribed program</description>
    <formula>Course__r.ProductRequestID__r.Child_of_Prescribed_Program__c</formula>
    <label>Child of Prescribed Program</label>
    <type>Checkbox</type>
</CustomField>