src/core-crm/objects/Product2/fields/Core_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Core_Concepts__c</fullName>
    <label>Core Concepts</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>