src/core-crm/objects/Product2/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <formula>Course__r.Course_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Code</label>
    <type>Text</type>
</CustomField>