src/core-crm/objects/Product2/fields/Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours__c</fullName>
    <formula>Course__r.hed__Credit_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>