src/core-crm/objects/Product2/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <formula>Course__r.Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>