src/core-crm/objects/Product2/fields/Decommission_Product__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommission Product</label>
    <type>Checkbox</type>
</CustomField>