src/core-crm/objects/Product2/fields/Decommission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Reason__c</fullName>
    <label>Decommission Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>