src/core-crm/objects/Product2/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Classroom</fullName>
            </value>
            <value>
                <fullName>Online Self-paced</fullName>
            </value>
            <value>
                <fullName>Brisbane Classroom</fullName>
            </value>
            <value>
                <fullName>Canberra Classroom</fullName>
            </value>
            <value>
                <fullName>Cairns Classroom</fullName>
            </value>
            <value>
                <fullName>NSW Classroom</fullName>
            </value>
            <value>
                <fullName>Melbourne Classroom</fullName>
                <isActive>false</isActive>
                <label>Melbourne Classroom</label>
            </value>
            <value>
                <fullName>Sydney Classroom</fullName>
                <isActive>false</isActive>
                <label>Sydney Classroom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>