src/core-crm/objects/Product2/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Product Description</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>