src/core-crm/objects/Product2/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Designation record.</description>
    <label>Designation</label>
    <referenceTo>Designation__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>