src/core-crm/objects/Product2/fields/Detail_Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Detail_Full_URL__c</fullName>
    <formula>IF(CONTAINS(TEXT (Family) ,&quot;CCE&quot;),&quot;&quot;, $Setup.Study_Store_URL_Settings__c.Study_Store_Link__c + Detail_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Full URL</label>
    <type>Text</type>
</CustomField>