src/core-crm/objects/Product2/fields/Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>Detail_URL__c</fullName>
    <formula>&quot;product/&quot; + SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( Lower(Name), &quot; &quot;, &quot;-&quot; ), &quot;&amp;&quot;, &quot;and&quot; ), &quot;&apos;&quot;, &quot;-&quot;), &quot;:&quot;, &quot;-&quot;), &quot;,&quot; ,&quot;-&quot;), &quot;+&quot;, &quot;-&quot;), &quot;.&quot;, &quot;-&quot;), &quot;#&quot;, &quot;-&quot;), &quot;@&quot;, &quot;-&quot;), &quot;~&quot;, &quot;-&quot;) + &quot;/&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail URL</label>
    <type>Text</type>
</CustomField>