src/core-crm/objects/Product2/fields/Do_not_Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Show_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the available start date from the Product Catalogue</description>
    <label>Do not Show Start Date</label>
    <type>Checkbox</type>
</CustomField>