src/core-crm/objects/Product2/fields/Donation_Cause__c.field-meta.xml
<CustomField>
    <fullName>Donation_Cause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Donation Cause record.</description>
    <label>Donation Cause</label>
    <referenceTo>Donation_Cause__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>