src/core-crm/objects/Product2/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>This duration will be visible on the Details Page on QUTeX Website</inlineHelpText>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>