src/core-crm/objects/Product2/fields/Evolve_with_QUTeX__c.field-meta.xml
<CustomField>
    <fullName>Evolve_with_QUTeX__c</fullName>
    <label>Evolve with QUTeX</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>