src/core-crm/objects/Product2/fields/Giving_Category__c.field-meta.xml
<CustomField>
    <fullName>Giving_Category__c</fullName>
    <description>The giving category(s) the Designation relates to.</description>
    <inlineHelpText>The giving category(s) the Designation relates to. Enables filtering of Designations published on the QUT Giving webpages.</inlineHelpText>
    <label>Giving Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Giving_Category</valueSetName>
    </valueSet>
</CustomField>