src/core-crm/objects/Product2/fields/Has_Detail_Page__c.field-meta.xml
<CustomField>
    <fullName>Has_Detail_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the page layout requires the custom fields to be completed for each section. If selected, page layout will only contain Cause Name, Cause Description and an image.</description>
    <inlineHelpText>Indicates if the page layout requires the custom fields to be completed for each section. If selected, page layout will only contain Cause Name, Cause Description and an image.</inlineHelpText>
    <label>Has Detail Page</label>
    <type>Checkbox</type>
</CustomField>