src/core-crm/objects/Product2/fields/Invoice_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Terms__c</fullName>
    <defaultValue>14</defaultValue>
    <inlineHelpText>This field controls the Invoice payment terms (in days)</inlineHelpText>
    <label>Invoice Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>