src/core-crm/objects/Product2/fields/Is_Flagship_Cause__c.field-meta.xml
<CustomField>
    <fullName>Is_Flagship_Cause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the primary cause to be displayed above all other Causes on the QUT Giving Page.</description>
    <inlineHelpText>Identifies the primary cause to be displayed above all other Causes on the QUT Giving Page.</inlineHelpText>
    <label>Is Flagship Cause</label>
    <type>Checkbox</type>
</CustomField>