src/core-crm/objects/Product2/fields/Is_Group_Booking_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Booking_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a hidden flag field to determine if Group Booking PriceBook has been added and is active under the Product Management tab of Product Request.</description>
    <label>Is Group Booking Active</label>
    <type>Checkbox</type>
</CustomField>