src/core-crm/objects/Product2/fields/Is_Group_Registration_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Registration_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be used in product catalogue to determine whether to allow group registration for a product.</description>
    <label>Is Group Registration Available</label>
    <type>Checkbox</type>
</CustomField>