src/core-crm/objects/Product2/fields/Maximum_Participants_Group__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Participants_Group__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Will set the maximum number of participants allowed for a group registration.</description>
    <label>Maximum Participants (Group)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>