src/core-crm/objects/Product2/fields/Minimum_Participants_Group__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Participants_Group__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Will set the minimum number of participants allowed for a group registration.</description>
    <label>Minimum Participants (Group)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>