src/core-crm/objects/Product2/fields/More_Details__c.field-meta.xml
<CustomField>
    <fullName>More_Details__c</fullName>
    <label>More Details</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>