src/core-crm/objects/Product2/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>