src/core-crm/objects/Product2/fields/Pay_later_due_days__c.field-meta.xml
<CustomField>
    <fullName>Pay_later_due_days__c</fullName>
    <label>Pay later due days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>