src/core-crm/objects/Product2/fields/Predefined_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Amount_1__c</fullName>
    <description>The first predefined donation amount displayed on the page that a donor can select.</description>
    <inlineHelpText>The first predefined donation amount displayed on the page that a donor can select.</inlineHelpText>
    <label>Predefined Amount 1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>