src/core-crm/objects/Product2/fields/Predefined_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Amount_3__c</fullName>
    <description>The third predefined donation amount to be displayed online that a donor can select.</description>
    <inlineHelpText>The third predefined donation amount to be displayed online that a donor can select.</inlineHelpText>
    <label>Predefined Amount 3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>