src/core-crm/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Course</fullName>
            </value>
            <value>
                <fullName>Master Class</fullName>
            </value>
            <value>
                <fullName>Microcredential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>