src/core-crm/objects/Product2/fields/Professional_Level__c.field-meta.xml
<CustomField>
    <fullName>Professional_Level__c</fullName>
    <label>Professional Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>