src/core-crm/objects/Product2/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>