src/core-crm/objects/Product2/fields/Publishing_End_date__c.field-meta.xml
<CustomField>
    <fullName>Publishing_End_date__c</fullName>
    <description>This is the date the Product will be removed from online product catalogue</description>
    <label>Publishing End Date</label>
    <type>Date</type>
</CustomField>