src/core-crm/objects/Product2/fields/Publishing_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Start_date__c</fullName>
    <description>This is the date the Product will be published online to the product catalogue</description>
    <label>Publishing Start Date</label>
    <type>Date</type>
</CustomField>