src/core-crm/objects/Product2/fields/QA_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Comments__c</fullName>
    <label>QA Comments</label>
    <type>TextArea</type>
</CustomField>