src/core-crm/objects/Product2/fields/QA_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Completed__c</fullName>
    <label>QA Review Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>