src/core-crm/objects/Product2/fields/Ready_for_publishing__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_publishing__c</fullName>
    <label>Ready for Publishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>