src/core-crm/objects/Product2/fields/Register_Interest_Available__c.field-meta.xml
<CustomField>
    <fullName>Register_Interest_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is true, register interest button will be available in the product catalogue when there’s no offering.</description>
    <label>Register Interest Available</label>
    <type>Checkbox</type>
</CustomField>