src/core-crm/objects/Product2/fields/Section_1_Heading__c.field-meta.xml
<CustomField>
    <fullName>Section_1_Heading__c</fullName>
    <description>Allows user to insert heading text which will be mapped to a specific section of the target webpage layout.</description>
    <inlineHelpText>Allows user to insert heading text which will be mapped to a specific section of the target webpage layout.</inlineHelpText>
    <label>Section 1 Heading</label>
    <length>80</length>
    <type>Text</type>
</CustomField>