src/core-crm/objects/Product2/fields/Section_1_Image_Video_Page_Location__c.field-meta.xml
<CustomField>
    <fullName>Section_1_Image_Video_Page_Location__c</fullName>
    <description>Allows user to set the desired position of the video or image in a specific section of the target webpage layout.</description>
    <inlineHelpText>Allows user to set the desired position of the video or image in a specific section of the target webpage layout.</inlineHelpText>
    <label>Section 1 Image / Video Page Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>