src/core-crm/objects/Product2/fields/Section_1_Image_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Section_1_Image_Video_URL__c</fullName>
    <description>Allows user to insert a URL for an image or video which will be mapped to a specific section of the target webpage layout.</description>
    <inlineHelpText>Allows user to insert a URL for an image or video which will be mapped to a specific section of the target webpage layout.</inlineHelpText>
    <label>Section 1 Image / Video URL</label>
    <type>Url</type>
</CustomField>