src/core-crm/objects/Product2/fields/Section_2_Content__c.field-meta.xml
<CustomField>
    <fullName>Section_2_Content__c</fullName>
    <description>Allows user to insert text content which will be mapped to a specific section of the target webpage layout.</description>
    <inlineHelpText>Allows user to insert text content which will be mapped to a specific section of the target webpage layout.</inlineHelpText>
    <label>Section 2 Content</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>