src/core-crm/objects/Product2/fields/Study_Area__c.field-meta.xml
<CustomField>
    <fullName>Study_Area__c</fullName>
    <description>Areas of study to be used as filter in the product catalogue.</description>
    <label>Study Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Creative Industries</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Digital capability</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Justice</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>