src/core-crm/objects/Product2/fields/Study_Association__c.field-meta.xml
<CustomField>
    <fullName>Study_Association__c</fullName>
    <description>QUT Study Area(s) the Donation Cause relates to. Enables filtering of Donation Causes published on the QUT Giving webpages.</description>
    <inlineHelpText>QUT Study Area(s) the Donation Cause relates to. Enables filtering of Donation Causes published on the QUT Giving webpages.</inlineHelpText>
    <label>Study Association</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architecture and Built Environment</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Creative Industries</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Information Technology and Games</fullName>
            </value>
            <value>
                <fullName>Justice</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>