src/core-crm/objects/Product2/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Subtype of course to be used as filter in the product catalogue base  from the chosen type.</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short course</fullName>
            </value>
            <value>
                <fullName>Micro Credential</fullName>
            </value>
            <value>
                <fullName>Masterclass</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Information Session</fullName>
            </value>
            <value>
                <fullName>Discussion Forum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>