src/core-crm/objects/Product2/fields/Title_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Title_Image_URL__c</fullName>
    <description>URL for the image in the title section of the webpage layout.</description>
    <inlineHelpText>URL for the image in the title section of the webpage layout.</inlineHelpText>
    <label>Title Image URL</label>
    <type>Url</type>
</CustomField>