src/core-crm/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of course to be used as filter in the product catalogue.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Product</fullName>
            </value>
            <value>
                <fullName>Short Course</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>