src/core-crm/objects/Product2/fields/Who_Should_Participate__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Participate__c</fullName>
    <label>Who Should Participate?</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>